CTT_Package/objects/ACN_Call_Flow_Template__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Extra_Parameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extra Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACN_Template_Sequence_No__c</fullName>
        <label>Sequence No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Flow Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACN_Status__c</columns>
        <columns>ACN_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Flow Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Flow Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>